--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <div class="about-contact-div">
 
-    <header class="contact-about-header bg-dark py-3">
+    <header class="contact-about-header text-white bg-dark py-3">
         <div class="container">
             <h1 class="text-center display-4 fw-normal" >About Us</h1>
         </div>
