--- a/views/add-article.ejs
+++ b/views/add-article.ejs
@@ -20,7 +20,7 @@
     <% } %>
     
     
-    <div class="col-9">
+    <div class="col-lg-9 col-12">
         <form action="/add-article" enctype="multipart/form-data" method="POST" class="my-form">
 
             <div class="row g-3">
