--- a/views/categoryById.ejs
+++ b/views/categoryById.ejs
@@ -16,7 +16,7 @@
                 <div class="category__img shadow">
                     <img src="/uploads/<%- article.image %>" alt="<%- article.name %>" loading="lazy">
                 </div>
-                <div class="pt-1"> <%- article.name %> </div>
+                <div class="pt-1 mb-2"> <%- article.name.substring(0,40) %>... </div>
             </a>
         <% }) %>
     <% } %>
