--- a/views/explore-latest.ejs
+++ b/views/explore-latest.ejs
@@ -1,13 +1,20 @@
 <h1 class="pb-4">Explore Latest</h1>
 
-<div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page"> Latest </li>
+  </ol>
+</nav>
+
+<div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3 py-4">
   <% if(latest != '') { %>
     <% latest.forEach(function(article, index){ %>
     <a href="/articles/<%= article._id %>" class="col text-center category__link">
       <div class="category__img shadow">
         <img src="/uploads/<%= article.image %>" alt="<%= article.name %>" loading="lazy">
       </div>
-      <div class="pt-1"><%= article.name %></div>
+      <div class="pt-1 mb-1"><%= article.name.substring(0,40) %>... </div>
     </a>
     <% }) %>
   <% } else { %>
